# llm-rag-skincare

./: PIPELINE_README.md  cli.py  docker-compose-pipeline.yml  docker-shell.sh  pyproject.toml
input-datasets/books/: Cosmetic_Dermatology.txt
outputs/: chunks-char-split-Cosmetic_Dermatology.jsonl
txt_preprocessor/: PDF_CONVERSION_GUIDE.md  README.md  pdf_text_extractor.py  pdf_to_txt.py
