[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "google-genai>=1.39.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "openai>=1.95.1",
    "openai-agents>=0.3.2",
    "pandas>=2.3.3",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.10.0",
    "pillow>=10.0.0",
]
